# CPNR_dt5730s

./: CMakeLists.txt  README.md
config/: dt5730s_ext_clock.conf  dt5730s_inorganic.conf  dt5730s_ls_coin.conf  dt5730s_master.conf  test.conf
gui/: main.py
gui/core/: DatabaseManager.py  ProcessManager.py
gui/widgets/: ConfigTab.py  DaqTab.py  DatabaseTab.py  MonitorTab.py  ProductionTab.py
gui/windows/: MainWindow.py
include/: CaenDigitizer.h  ConfigParser.h  DAQManager.h  EventHeader.h
python_tools/: monitoring_dt5730.py
src/: DAQManager.cpp  frontend_dt5730.cpp  production_dt5730.cpp
